<resources>
    <string name="app_name">MusicClientAppP5</string>
    <string name="bind_button_text">Bind to Service</string>
    <string name="binding_button_text">Binding from Service...</string>
    <string name="unbind_button_text">Unbind from Service</string>
    <string name="unbinding_button_text">Unbinding from Service...</string>
    <string name="bind_text">Connected to Music Central Service</string>
    <string name="unbind_text">Not Connected to Music Central Service</string>
    <string name="song_list_btn_text">Show Songs List</string>
    <string name="select_song_text">Select a Song</string>
    <string name="play_song_text">PLAY</string>
</resources>